# refine-flow

./: .env.example  .env.template  .gitignore  CHANGELOG.md  DOCKER.md  LANGCHAIN.md  LANGCHAIN_SUMMARY.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  ollama.sh  pyproject.toml  setup.sh
plans/refineflow-implementation/: refineflow-implementation-complete.md
src/refineflow/: __init__.py  __main__.py
src/refineflow/cli/: __init__.py  app.py  flows.py  inputs.py  menu.py
src/refineflow/core/: __init__.py  canvas.py  exporters.py  models.py  state.py
src/refineflow/llm/: __init__.py  client.py  client_langchain.py  langchain_prompts.py  models.py  processor.py  processor_langchain.py  prompts.py
src/refineflow/rag/: __init__.py
src/refineflow/storage/: __init__.py  filesystem.py  index.py  templates.py
src/refineflow/utils/: __init__.py  config.py  editor.py  logger.py  time.py
tests/: test_canvas.py  test_config.py  test_editor.py  test_exporters.py  test_flows.py  test_jira_export_e2e.py  test_jira_prompt.py  test_jira_validation.py  test_llm_extraction.py  test_logger.py  test_models.py  test_state.py  test_storage.py  test_time.py
